LegUp/214_benchmarks/extr_.reactosdll3rdpartydxtntxc_compress_dxtn.c_storedxtencodedblock_with_main/log.txt
# annotate loop labels
../../../mark_labels.pl extr_.reactosdll3rdpartydxtntxc_compress_dxtn.c_storedxtencodedblock_with_main.c > extr_.reactosdll3rdpartydxtntxc_compress_dxtn.c_storedxtencodedblock_with_main_labeled.c
# produces pre-link time optimization binary bitcode: extr_.reactosdll3rdpartydxtntxc_compress_dxtn.c_storedxtencodedblock_with_main.prelto.bc
clang extr_.reactosdll3rdpartydxtntxc_compress_dxtn.c_storedxtencodedblock_with_main_labeled.c -emit-llvm -c -fno-builtin -m32 -I ../../../lib/include/ -I /usr/include/i386-linux-gnu -O3 -o extr_.reactosdll3rdpartydxtntxc_compress_dxtn.c_storedxtencodedblock_with_main.prelto.1.bc
extr_.reactosdll3rdpartydxtntxc_compress_dxtn.c_storedxtencodedblock_with_main_labeled.c:151:13: error: expected identifier or '('
  GLubyte (*)[4][4] srccolors;
            ^
extr_.reactosdll3rdpartydxtntxc_compress_dxtn.c_storedxtencodedblock_with_main_labeled.c:157:33: error: use of undeclared identifier 'srccolors'
  storedxtencodedblock(blkaddr, srccolors, bestcolor, numxpixels, numypixels, type, haveAlpha);
                                ^
2 errors generated.
make: *** [all] Error 1
